<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.activities.StarterActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/tvAds"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/txt_ads" 
        android:layout_marginTop="0dp"
        android:background="@drawable/draw_ads"
        android:gravity="center"
        />
    
    <Button
        android:id="@+id/btnFile"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/tvAds"
        android:text="@string/txtFile" 
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="openFileExplorerActivity"
        android:background="@drawable/draw_home_btn"
        />
    
    <Button
        android:id="@+id/btnText"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/btnFile"
        android:text="@string/txtText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" 
        android:onClick="openTextEncrypterActivity"
        android:background="@drawable/draw_home_btn"
        />

</RelativeLayout>
